--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1674,7 +1674,7 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     border:2px;
     border-style:solid;
     border-color: #1B0748;
-    margin: 0 2px;
+    margin: 0px 2px 5px;
     cursor:help;
 }
 
