--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,40 +1,3 @@
-/* Color Palette */
-.color-primary-0 { color: #112366 }	/* Main Primary color */
-.color-primary-1 { color: #14329F }
-.color-primary-2 { color: #162C7E }
-.color-primary-3 { color: #081647 }
-.color-primary-4 { color: #050D2A }
-
-.color-secondary-1-0 { color: #2A1067 }	/* Main Secondary color (1) */
-.color-secondary-1-1 { color: #3D12A1 }
-.color-secondary-1-2 { color: #35147F }
-.color-secondary-1-3 { color: #1B0748 }
-.color-secondary-1-4 { color: #10042B }
-
-.color-secondary-2-0 { color: #084D5D }	/* Main Secondary color (2) */
-.color-secondary-2-1 { color: #057791 }
-.color-secondary-2-2 { color: #0A5F73 }
-.color-secondary-2-3 { color: #023541 }
-.color-secondary-2-4 { color: #011F26 }
-
-.color-primary-b0 { color: #1D1F26 }	/* Main Primary color */
-.color-primary-b1 { color: #484C5B }
-.color-primary-b2 { color: #343741 }
-.color-primary-b3 { color: #161923 }
-.color-primary-b4 { color: #111420 }
-
-.color-secondary-b1-0 { color: #201D26 }	/* Main Secondary color (1) */
-.color-secondary-b1-1 { color: #4F495C }
-.color-secondary-b1-2 { color: #383442 }
-.color-secondary-b1-3 { color: #1A1624 }
-.color-secondary-b1-4 { color: #151120 }
-
-.color-secondary-b2-0 { color: #1A2123 }	/* Main Secondary color (2) */
-.color-secondary-b2-1 { color: #405053 }
-.color-secondary-b2-2 { color: #2E393B }
-.color-secondary-b2-3 { color: #131E20 }
-.color-secondary-b2-4 { color: #0E1A1D }
-
 .color-statslist-toolbar { color: #3d4b52 }
 
 /* Image downscaling settings - Made necessary when I realized Chrome had crappy downscaling of png images making them blurry */
@@ -1409,16 +1372,27 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     margin: 0 -100%;
     font-size: 12px;
     font-weight: normal;
+    font-family: arial sans-serif;
     z-index: 7;
 }
 
 .rm-sw-sp-kda-text {
+    color: #9593af;
     cursor: help;
     z-index: 8;
 }
 
 .rm-sw-sp-kda-num {
-    color: rgba(255, 255, 255, 0.92) !important;
+    color: #FFFFFF;
+}
+
+.rm-sw-sp-kda-num-good {
+    color: #a3ecff;
+}
+
+.rm-sw-sp-kda-num-great {
+    color: #00d4ff;
+    font-weight:600;
 }
 
 .rm-sw-sp-medal-container {
@@ -1839,4 +1813,132 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     width:24px;
     height:24px;
     cursor:help;
+}
+
+.rm-fm-r-kda-container {
+    background-color: #8a733c;
+    position:absolute;
+    width:80px;
+    height:100%;
+    left:364px;
+    top:0px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.rm-fm-r-kda-indiv {
+    position:relative;
+    width:100%;
+    margin-top: 7px;
+    line-height: 12px;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: 12px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
+.rm-fm-r-kda {
+    position: relative;
+    width:100%;
+    margin-top: 4px;
+    line-height: 10px;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: 10px;
+    font-weight: normal;
+    font-family: arial sans-serif;
+}
+
+.rm-fm-r-stats-offense-container {
+    background-color: #3c6c8a;
+    position:absolute;
+    width:98px;
+    height:100%;
+    left:444px;
+    top:0px;
+    padding: 2px 2px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.rm-fm-r-stats-utility-container {
+    background-color: #468a72;
+    position:absolute;
+    width:98px;
+    height:100%;
+    left:542px;
+    top:0px;
+    padding: 2px 2px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.rm-fm-r-stats-row {
+    background-color: #141414;
+    position: relative;
+    width:100%;
+    height:33.333333%;
+    border:1px;
+    border-style: solid;
+    border-color: #000000;
+    cursor:help;
+}
+
+.rm-fm-r-stats-bar {
+    position: relative;
+    width:100%; /*TODO*/
+    height:100%;
+}
+
+.rm-fm-r-stats-number {
+    position: absolute;
+    width:100%;
+    left:0;
+    top:0;
+    right:0;
+    bottom:0;
+    margin: -1px auto;
+    line-height: 14px;
+    text-align: center;
+    color: #FFFFFF;
+    font-size: 9px;
+    font-weight: 500;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
+    overflow:visible;
+    white-space: nowrap;
+    text-wrap: none;
+    z-index: 9;
+    text-shadow: -1px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
+}
+
+.rm-fm-r-stats-number-none {
+    color: #5a5a73;
+    text-shadow: none !important;
+}
+
+.rm-fm-r-stats-herodamage {
+    background-color: #af0015;
+}
+
+.rm-fm-r-stats-siegedamage {
+    background-color: #af5800;
+}
+
+.rm-fm-r-stats-merccamps {
+    background-color: #af9900;
+}
+
+.rm-fm-r-stats-healing {
+    background-color: #00af4a;
+}
+
+.rm-fm-r-stats-damagetaken {
+    background-color: #008faf;
+}
+
+.rm-fm-r-stats-expcontrib {
+    background-color: #5a00af;
 }
