--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -31,13 +31,20 @@
         </div>
         <div class="row">
             <div class="col-xl-2"></div>
-            <div class="col-sm-12 col-md-12 col-xl-8">
+            <div class="col-12 col-xl-8">
                 {% embed ':snippets:players/playerloader.html.twig' %}
                     {% block javascripts %}{% endblock %}
                     {% block filter %}
                         <div>
                             {% include ':snippets:heroes/filter/dropdown/select/seasons.html.twig' %}
                             {% include ':snippets:heroes/filter/dropdown/multiselect/gameTypes.html.twig' %}
+                        </div>
+                    {% endblock %}
+                    {% block player_summary %}
+                        <div class="playersummary-container">
+                            <div class="playersummary-player">
+                                {{ player.name }}#{{ player.tag }}
+                            </div>
                         </div>
                     {% endblock %}
                 {% endembed %}
