--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2034,3 +2034,20 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     white-space: nowrap;
     text-shadow: -1px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
 }
+
+.playersummary-container {
+    position:relative;
+    width:100%;
+    margin: 0 auto;
+    text-align: center;
+    overflow: hidden;
+    text-wrap: none;
+    white-space: nowrap;
+}
+
+.playersummary-player {
+    color:#FFFFFF;
+    font-size:24px;
+    font-weight: bold;
+    cursor:default;
+}
