--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -18,6 +18,9 @@
                     <div class="hotstatus-subcontainer">
                         {% block player_summary %}{% endblock %}
                     </div>
+                    <div class="hotstatus-subcontainer">
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -25,6 +28,7 @@
             <div class="row">
                 <div class="col text-center">
                     {# Right Pane #}
+                    <div id="pl-recentmatches-loader"></div>
                     <div id="pl-recentmatches-container" class="pl-recentmatches-container hotstatus-subcontainer horizontal-scroller">{# PLAYERLOADER GENERATED #}</div>
                 </div>
             </div>
