Completed playerdata topheroes action, further fleshed out playerloader topheroes ajax and data

--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -18,9 +18,7 @@
                     <div class="hotstatus-subcontainer">
                         {% block player_summary %}{% endblock %}
                     </div>
-                    <div class="hotstatus-subcontainer">
-
-                    </div>
+                    <div id="pl-topheroes-container" class="pl-topheroes-container hotstatus-subcontainer">{# PLAYERLOADER GENERATED #}</div>
                 </div>
             </div>
         </div>
