Finished implementation of player page topheroes pane

--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -30,8 +30,10 @@
             <div class="row">
                 <div class="col text-center">
                     {# Right Pane #}
+                    <div id="player-rightpane-container" class="player-rightpane-container">
                     <div id="pl-recentmatches-loader"></div>
-                    <div id="pl-recentmatches-container" class="pl-recentmatches-container hotstatus-subcontainer horizontal-scroller">{# PLAYERLOADER GENERATED #}</div>
+                    {# Recent Matches PLAYERLOADER GENERATED #}
+                    </div>
                 </div>
             </div>
         </div>
