Implemented parties pane generation for player page with accompanying response action

--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -21,6 +21,7 @@
                                 {% block player_summary %}{% endblock %}
                             </div>
                             {# Top Heroes PLAYERLOADER GENERATED #}
+                            {# Parties PLAYERLOADER GENERATED #}
                         </div>
                     </div>
                 </div>
